[b85aaac081d3ae044e07cf3766284bb7e9eb8bad]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-cartao-protegido.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -171,7 +171,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/braspag-cartao-protegido">Cartão Protegido</a>
+                    <a href="https://developercielo.github.io/manual/braspag-cartao-protegido">Cartão Protegido Braspag</a>
                 </li>
             
                 <li class="doc-title">
