[c2e41d69333770387cd6b94c793056bfddb19dd0]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-cartao-protegido.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/braspag-cartao-protegido">Cartão Protegido Braspag</a>
+                    <a href="https://developercielo.github.io/tutorial/braspag-cartao-protegido">Cartão Protegido</a>
                 </li>
             
                 <li class="doc-title">
