[aa90f7d255fbdebb951fead63e8dbf4a6ed5bd30]: Moved '_i18n/pt/_posts/braspag/2017-07-26-braspag-pagador-copy.md' to '_i18n/pt/_posts/braspag/2017-07-26-antifraude.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/braspag-pagador-copy">Pagador</a>
+                    <a href="https://developercielo.github.io/manual/antifraude">Pagador</a>
                 </li>
             
             </ul>
