--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/braspag-pagador-copy">Pagador</a>
+                    <a href="https://developercielo.github.io/manual/antifraude">Pagador</a>
                 </li>
             
             </ul>
