--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -57,7 +57,7 @@
             <ul class="language-buttons">
                 
                 <li>
-                    <a data-language-name='json'>JSON</a>
+                    <a data-language-name='xml'>XML</a>
                 </li>
                 
             </ul>
@@ -129,7 +129,7 @@
 
 <h2 id="legenda-para-os-tipos-de-formato">Legenda para os tipos de formato</h2>
 
-<p>Tipos de Formato (Tabela II)</p>
+<h3 id="tipos-de-formato-tabela-ii">Tipos de Formato (Tabela II)</h3>
 
 <table>
   <thead>
@@ -197,7 +197,372 @@
 <p>O principal insumo do Conciliador são os extratos eletrônicos gerados pelas adquirentes. Devido a isso, podem existir particularidades entre cada uma. <br />
 Abaixo a estimativa de dias em que a adquirente envia os eventos no extrato eletrônico:</p>
 
-<p>Prazo de registro no extrato eletrônico (Tabela II)</p>
+<h3 id="prazo-de-registro-no-extrato-eletrônico-tabela-ii">Prazo de registro no extrato eletrônico (Tabela II)</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Adquirente</th>
+      <th>Captura</th>
+      <th>Pagamento</th>
+      <th>Observação</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Cielo</td>
+      <td>D+1</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Rede</td>
+      <td>D+1</td>
+      <td>D -1</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Amex</td>
+      <td>Entre D+1 à  D+2</td>
+      <td>Entre D-4 à D-6</td>
+      <td>*Desconsiderar do prazo a segunda feira, pois os extratos  não são gerados. Nestes dias o arquivo do Conciliador será disponibilizado somente com o header.</td>
+    </tr>
+    <tr>
+      <td>Getnet</td>
+      <td>D+1</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Ticket</td>
+      <td>D+30 ajustada ao dia de recebimento do cliente</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Sodexo</td>
+      <td>D+30 ajustada ao dia de recebimento do cliente</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Stone</td>
+      <td>Cartão de Débito: D+1 - Cartão de Crédito: D+30</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>Global Collect</td>
+      <td>Cartão de Débito: D+1 - Cartão de Crédito: D+30</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+    <tr>
+      <td>First Data</td>
+      <td>Cartão de Débito: D+1 - Cartão de Crédito: D+30</td>
+      <td>D</td>
+      <td>Pagamentos são realizados de Segunda à Sexta</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="registro-header-tabela-iii">Registro Header (Tabela III)</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Nome</th>
+      <th>Tipo</th>
+      <th>Formato</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>MerchantId</td>
+      <td>Identificador da Loja</td>
+      <td>Numérico (Inteiro)</td>
+      <td>N</td>
+      <td>Contém o identificador único da loja no Conciliador</td>
+    </tr>
+    <tr>
+      <td>AcquirerId</td>
+      <td>Identificador da Adquirente</td>
+      <td>Numérico (Inteiro)</td>
+      <td>{N}</td>
+      <td>1 = Cielo<br />2 = Redecard<br />3 = Amex<br />5 = Getnet<br />6 = Ticket<br />7 = Stone<br />8 = Sodexo<br />9 = Global Payments<br />10 = First Data</td>
+    </tr>
+    <tr>
+      <td>GenerationDateTime</td>
+      <td>Geração do arquivo</td>
+      <td>Data/Hora</td>
+      <td>DT</td>
+      <td>Contém a data e a hora da geração do arquivo pelo Conciliador</td>
+    </tr>
+    <tr>
+      <td>StartPeriod</td>
+      <td>Período inicial</td>
+      <td>Data</td>
+      <td>D</td>
+      <td>Data inicial do período de conciliação contemplado pelo arquivo</td>
+    </tr>
+    <tr>
+      <td>EndPeriod</td>
+      <td>Período final</td>
+      <td>Data</td>
+      <td>D</td>
+      <td>Data final do período de conciliação contemplado pelo arquivo</td>
+    </tr>
+    <tr>
+      <td>SequentialNumber</td>
+      <td>Número sequencial</td>
+      <td>Numérico (Inteiro)</td>
+      <td>N</td>
+      <td>Número sequencial que indica a ordem de processamento dos arquivos diários</td>
+    </tr>
+    <tr>
+      <td>ProcessingTypeId</td>
+      <td>Identificador do tipo de processamento</td>
+      <td>Numérico (Inteiro)</td>
+      <td>{N}</td>
+      <td>1 = Arquivo diário <br /> 2 = Arquivo reprocessado</td>
+    </tr>
+    <tr>
+      <td>ProcessingType</td>
+      <td>Descrição do tipo de processamento</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>“Daily” ou “Reprocessed” (Diário ou reprocessado)</td>
+    </tr>
+    <tr>
+      <td>Version</td>
+      <td>Versão do arquivo</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Versão do arquivo (“2.0”)</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="registro-de-transação-conciliada-tabela-iv">Registro de Transação Conciliada (Tabela IV)</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Nome</th>
+      <th>Tipo</th>
+      <th>Formato</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>ConciliationTypeId</td>
+      <td>Identificador do tipo de conciliação</td>
+      <td>Numérico (Inteiro)</td>
+      <td>{N}</td>
+      <td>1   = Automática <br /> 2   = Manual</td>
+    </tr>
+    <tr>
+      <td>ConciliationType</td>
+      <td>Descrição do tipo de conciliação</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>“Automatic” ou “Manual” (Automática ou manual)</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="registro-de-conciliação-manual-tabela-v">Registro de Conciliação Manual (Tabela V)</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Nome</th>
+      <th>Tipo</th>
+      <th>Formato</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>ConciliationUserName</td>
+      <td>Usuário da conciliação manual</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Login do usuário que efetuou a conciliação manual</td>
+    </tr>
+    <tr>
+      <td>ConciliationDateTime</td>
+      <td>Data e hora da conciliação manual</td>
+      <td>Data/Hora</td>
+      <td>DT</td>
+      <td>Data e hora em que a conciliação manual foi efetuada pelo usuário</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="registro-de-informação-de-venda">Registro de Informação de Venda</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>Campo</th>
+      <th>Nome</th>
+      <th>Tipo</th>
+      <th>Formato</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>TransactionId</td>
+      <td>Identificador Único da  Venda no Conciliador</td>
+      <td>Identificador Único  Global (GUID)</td>
+      <td>G</td>
+      <td>Identificador único do Conciliador para as informações de venda1</td>
+    </tr>
+    <tr>
+      <td>ExternalId</td>
+      <td>Identificador da Venda no  Sistema Transacional</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Identificador da Venda obtido a partir do Sistema Transacional no qual a Transação foi processada com a Adquirente-2</td>
+    </tr>
+    <tr>
+      <td>BranchId</td>
+      <td>Identificador da Filial</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Identificador da Filial da loja que processou a venda-3</td>
+    </tr>
+    <tr>
+      <td>AffiliationCode</td>
+      <td>Código de Afiliação</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>O código de afiliação da adquirente, informado nos dados da venda do cliente</td>
+    </tr>
+    <tr>
+      <td>OrderId</td>
+      <td>Número do Pedido</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>O número do pedido associado à venda no lojista-4</td>
+    </tr>
+    <tr>
+      <td>AuthorizationCode</td>
+      <td>Código de Autorização</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>O Código de Autorização da transação que o Lojista recebeu da Adquirente</td>
+    </tr>
+    <tr>
+      <td>SaleDate</td>
+      <td>Data da Venda</td>
+      <td>Data</td>
+      <td>D</td>
+      <td>A data em que foi realizada a venda no Lojista</td>
+    </tr>
+    <tr>
+      <td>CaptureDate</td>
+      <td>Data da Captura</td>
+      <td>Data</td>
+      <td>D</td>
+      <td>A data da captura recebida pelo lojista da Adquirente</td>
+    </tr>
+    <tr>
+      <td>TransactionAmount</td>
+      <td>Valor da transação</td>
+      <td>Numérico (Inteiro)</td>
+      <td>N</td>
+      <td>O valor da transação em centavos5</td>
+    </tr>
+    <tr>
+      <td>InstallmentCount</td>
+      <td>Número de parcelas</td>
+      <td>Numérico (Inteiro)</td>
+      <td>N</td>
+      <td>A quantidade de parcelas na qual a transação foi dividida</td>
+    </tr>
+    <tr>
+      <td>CustomerName</td>
+      <td>Nome do comprador</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>O nome do comprador do produto</td>
+    </tr>
+    <tr>
+      <td>CustomerDocument</td>
+      <td>Documento do comprador</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Documento de identificador do comprador (RG, CPF, etc.)</td>
+    </tr>
+    <tr>
+      <td>CustomerEmail</td>
+      <td>E-mail do comprador</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Endereço de e-mail do comprador</td>
+    </tr>
+    <tr>
+      <td>CardNumber</td>
+      <td>Número do cartão</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Número do cartão (crédito ou débito) utilizado na venda</td>
+    </tr>
+    <tr>
+      <td>Tid</td>
+      <td>TID</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Identificador da transação ecommerce na Cielo, recebido pelo lojista</td>
+    </tr>
+    <tr>
+      <td>Nsu</td>
+      <td>NSU</td>
+      <td>Número</td>
+      <td>N</td>
+      <td>Número sequencial da transação na  Adquirente, recebido pelo lojista</td>
+    </tr>
+    <tr>
+      <td>IataAmount</td>
+      <td>Valor da taxa IATA</td>
+      <td>Número</td>
+      <td>N</td>
+      <td>Valor da taxa IATA (apenas para setor aéreo), em centavos</td>
+    </tr>
+    <tr>
+      <td>PaymentMethodName</td>
+      <td>Tipo de Integração</td>
+      <td>Alfanumérico</td>
+      <td>A</td>
+      <td>Nome do meio de pagamento utilizado no caso da transação efetuada no  gateway Pagador</td>
+    </tr>
+  </tbody>
+</table>
+
+<ol>
+  <li>As informações de venda são as transações enviadas pelo cliente do mundo físico, ou do  gateway/sistema transacional utilizado para efetuar as transações. São a primeira parte da conciliação. O Identificador Único da Venda pode ser utilizado para visualizar a venda no WebSite do Conciliador, preenchendo a URL:</li>
+</ol>
+
+<blockquote>
+  <p>https://reconciliation.braspag.com.br/WebSite/Reports/TransactionDetails.aspx?SaleTransactionId=[ID]</p>
+</blockquote>
+
+<p><strong>OBS:</strong>Onde o texto [ID] deve ser substituído pelo identificador informado no registro.</p>
+
+<ol>
+  <li>O identificador da Venda no Sistema Transacional é o Identificador da Transação que é utilizado pelo sistema que efetuou a venda, seja ele um Gateway ou Sistema de Caixa/POS. Este valor pode ou não ser fornecido durante a importação da venda para o Conciliador. É de responsabilidade do cliente a decisão de informá-lo ou não.</li>
+  <li>O identificador da Filial deve ser fornecido pelo cliente toda vez que a importação de uma venda é realizada para o Conciliador. Apesar de não haver restrições para o formato do identificador da filial (campo Alfanumérico), é obrigatório que cada Filial possua um identificador único.</li>
+  <li>O Gerenciamento do Número do Pedido é de inteira responsabilidade do lojista. O Conciliador apenas armazena esta informação, mas nenhum tipo de validação é feito.</li>
+  <li>O Valor da Transação não é o valor das parcelas. O valor informado aqui é o valor integral da mesma, da forma como informado pelo cliente/gateway.</li>
+</ol>
 
 </div>
  <div class="footer-conteudo">
