--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -564,6 +564,26 @@ Abaixo a estimativa de dias em que a adquirente envia os eventos no extrato elet
   <li>O Valor da Transação não é o valor das parcelas. O valor informado aqui é o valor integral da mesma, da forma como informado pelo cliente/gateway.</li>
 </ol>
 
+<h3 id="registro-de-informação-da-adquirente">Registro de Informação da Adquirente</h3>
+
+<ol>
+  <li>As informações da adquirente são os dados da venda que o Conciliador recebe dos extratos eletrônicos, o meio de integração da adquirente com os sistemas externos. São a segunda parte da conciliação. O Identificador Único da Transação pode ser utilizado para visualizar a venda no WebSite do Conciliador, preenchendo a URL: <br />
+https://reconciliation.braspag.com.br/WebSite/Reports/TransactionDetails.aspx?AcquirerTransactionId=[I D] <br />
+Onde o texto [ID] deve ser substituído pelo identificador informado no registro.</li>
+  <li>Devido à restrições de segurança, o número do cartão será informado de forma mascarada.</li>
+  <li>Quando uma transação é dividida em uma quantidade de parcelas onde o valor não pode ser distribuído igualmente entre as parcelas, surge a necessidade de colocar um valor extra em uma parcela específica. Esta parcela é chamada de parcela de arredondamento. Como exemplo, podemos adotar uma transação de R$ 100,00 dividida em três parcelas. Se a primeira parcela for a parcela de arredondamento, ela terá o valor de R$ 33,34 – enquanto as duas outras parcelas terão o valor de R$ 33,33.</li>
+  <li>A taxa de adquirência normalmente é expressa em porcentagem. O campo demonstra essa porcentagem multiplicada por 100. Portanto, se o valor deste campo for expresso como 275, isto indica uma taxa de adquirência de 2,75%.</li>
+  <li>Tabelas com os meios de captura informados estão disponíveis no Apêndice do Manual.</li>
+  <li>Uma tabela com as bandeiras disponíveis está disponível no Apêndice do Manual.</li>
+  <li>Uma tabela com os tipos de produto está disponível no Apêndice do Manual.</li>
+</ol>
+
+<h3 id="registro-de-evento">Registro de Evento</h3>
+
+<h1 id="arquivos-fluxo-de-caixa-20---csv">Arquivos Fluxo de Caixa 2.0 - CSV</h1>
+
+<p>Teste</p>
+
 </div>
  <div class="footer-conteudo">
     <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
