--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -2034,6 +2034,37 @@ Por meio dele, qualquer sistema pode se conectar para consultar ou inserir dados
   </tbody>
 </table>
 
+<h2 id="apêndice">Apêndice:</h2>
+
+<h3 id="utilizando-o-arquivo-de-schema-definition-xsd">Utilizando o arquivo de Schema Definition (XSD)</h3>
+
+<p>Uma forma de integração com o Arquivo de Fluxo de Caixa do Conciliador no formato XML de maneira programada ou automática, é feita através do arquivo de definição de esquema, ou <code class="highlighter-rouge">XML Schema Definition File</code>.</p>
+
+<p>O XML Schema é uma linguagem baseada no formato XML para definição de regras de validação (“esquemas”) em documentos no formato XML. Foi a primeira linguagem de esquema para XML que obteve recomendação por parte do <strong>W3C</strong>. Esta linguagem é uma alternativa ao <strong>DTD</strong>, cuja sintaxe não é baseada no formato XML. <br />
+Foi amplamente utilizado para desenvolvimento da NF-e (Nota Fiscal Eletrônica) Brasileira.</p>
+
+<p>Um arquivo contendo as definições na linguagem XML Schema é chamado de <strong>XSD (XML Schema Definition)</strong>, este descreve a estrutura de um documento XML.</p>
+
+<p>O conciliador possui arquivos XSD para cada um de seus arquivos em XML. Desta forma, é possível, programaticamente compreender a estrutura do XML, supondo que o arquivo XSD seja corretamente interpretado pela ferramenta.</p>
+
+<p>Neste manual, não serão citadas todas as formas de se trabalhar com o arquivo, entretanto, podemos demonstrar, através da utilização de uma ferramenta provida pela IDE de desenvolvimento Visual Studio, como gerar, programaticamente uma Classe em código-fonte que pode representar o conteúdo do arquivo.</p>
+
+<p>Desta forma, será possível deserializar o conteúdo de qualquer arquivo dentro desta classe, e com isto utilizar os arquivos de conciliação em um sistema com código orientado a objetos.</p>
+
+<p>Criando a classe do arquivo por meio do arquivo de definição de esquema <br />
+Com os arquivos de definição de esquema, você deverá utilizar uma ferramenta que pode ser acessada à partir da linha de comando da IDE do Visual Studio (Visual Studio Command Prompt). O nome do executável é “xsd” (sem aspas).</p>
+
+<p>O executável possui uma série de parâmetros para customizar a geração da sua classe a partir do arquivo de definição de esquema. Caso você queira ver todas as opções, consulte a URL https://msdn.microsoft.com/en-us/library/x6c1kb0s(v=VS.100).aspx. <br />
+No exemplo abaixo, utilizamos o comando para gerar a classe da forma mais básica. Acesse o diretório onde os arquivos de esquemas estão salvos(normalmente são dois arquivos, “ConciliationFile.xsd” e “Guid.xsd”), usando o comando CD do DOS.   Uma vez dentro deste diretório, basta executar o comando conforme abaixo: 
+xsd</p>
+
+<p>ConciliationFile.xsd Guid.xsd /classes</p>
+
+<p>Um exemplo do efeito disto na linha de commando é demonstrado na imagem abaixo. A classe gerada terá o nome 
+<strong>“ConciliationFile_Guid.cs”</strong>. 
+Esta classe pode ser inserida em um projeto na linguagem C#, e com algumas alterações pode representar o conteúdo do arquivo por meio de deserialização. <br />
+Consulte o suporte de sua linguagem de desenvolvimento para verificar se a mesma possui algum tipo de automatização para interpretar a leitura do arquivo em XML. Isto pode facilitar seu processo de desenvolvimento e aprendizado do layout do mesmo</p>
+
 <h1 id="arquivos-fluxo-de-caixa-20---csv">Arquivos Fluxo de Caixa 2.0 - CSV</h1>
 
 <p>Teste</p>
