[ad52c2f505104f4e388f01b0245e404dc65628ef]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-conciliador.md' via CloudCannon

--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -2065,6 +2065,8 @@ xsd</p>
 Esta classe pode ser inserida em um projeto na linguagem C#, e com algumas alterações pode representar o conteúdo do arquivo por meio de deserialização. <br />
 Consulte o suporte de sua linguagem de desenvolvimento para verificar se a mesma possui algum tipo de automatização para interpretar a leitura do arquivo em XML. Isto pode facilitar seu processo de desenvolvimento e aprendizado do layout do mesmo</p>
 
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/xml20.png" alt="" /></p>
+
 <h1 id="arquivos-fluxo-de-caixa-20---csv">Arquivos Fluxo de Caixa 2.0 - CSV</h1>
 
 <p>Teste</p>
