[4a1e0571298c5cec56328f4e16f0c073a1872e44]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-conciliador.md' via CloudCannon

--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -371,6 +371,8 @@ As informações são guardadas em três tipos de registros, Header, Transação
 
 <p><strong>IMAGEM</strong></p>
 
+<p><code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+
 <p>Agora basta selecionar a loja, e realizar o upload escolhendo o arquivo que deseja transmitir de sua máquina. Para iniciar a transmissão click em “Efetuar upload”.</p>
 
 <h3 id="transferência-automática-configuração-de-sftp">Transferência automática: Configuração de SFTP</h3>
@@ -385,6 +387,8 @@ Porém para que seja possível a realização da automação, esse processo exig
 </ul>
 
 <p><strong>IMAGEM</strong></p>
+
+<p><code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
 
 <h3 id="transferência-de-arquivos-automática-via-webservice">Transferência de arquivos automática via Webservice:</h3>
 
@@ -452,11 +456,13 @@ Caso o cliente queira codificar/decodificar um conteúdo como teste, ele pode ac
 
 <h4 id="request">Request</h4>
 
-<p><strong>EXEMPLO XML 01</strong></p>
+<p><strong>EXEMPLO XML 01</strong>
+<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
 
 <h4 id="response">Response</h4>
 
-<p><strong>EXEMPLO XML 02</strong></p>
+<p><strong>EXEMPLO XML 02</strong>
+<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
 
 <h2 id="tipos-de-erro">Tipos de erro</h2>
 
@@ -503,7 +509,8 @@ Caso o cliente queira codificar/decodificar um conteúdo como teste, ele pode ac
 
 <h3 id="exemplo">Exemplo</h3>
 
-<p><strong>EXEMPLO XML 03</strong></p>
+<p><strong>EXEMPLO XML 03</strong>
+<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
 
 <h1 id="arquivos-fluxo-de-caixa-20---xml">Arquivos Fluxo de Caixa 2.0 - XML</h1>
 
