[fa850d6c28c08c01e8251bec5360e157b778b44d]: Update 2000-01-01-credenciamento.md

--- a/manual/braspag-conciliador.html
+++ b/manual/braspag-conciliador.html
@@ -369,9 +369,7 @@ As informações são guardadas em três tipos de registros, Header, Transação
   <li>Localize o botão <strong>“Upload de arquivos de Transações”</strong>, ao clicar, aparecerá a seguinte tela:</li>
 </ul>
 
-<p><strong>IMAGEM</strong></p>
-
-<p><code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/upload.png" alt="" /></p>
 
 <p>Agora basta selecionar a loja, e realizar o upload escolhendo o arquivo que deseja transmitir de sua máquina. Para iniciar a transmissão click em “Efetuar upload”.</p>
 
@@ -386,9 +384,7 @@ Porém para que seja possível a realização da automação, esse processo exig
   <li>A Braspag terá acesso liberado para se conectar e realizar as baixas</li>
 </ul>
 
-<p><strong>IMAGEM</strong></p>
-
-<p><code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/fluxo.png" alt="" /></p>
 
 <h3 id="transferência-de-arquivos-automática-via-webservice">Transferência de arquivos automática via Webservice:</h3>
 
@@ -456,13 +452,11 @@ Caso o cliente queira codificar/decodificar um conteúdo como teste, ele pode ac
 
 <h4 id="request">Request</h4>
 
-<p><strong>EXEMPLO XML 01</strong>
-<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/request.png" alt="" /></p>
 
 <h4 id="response">Response</h4>
 
-<p><strong>EXEMPLO XML 02</strong>
-<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/response.png" alt="" /></p>
 
 <h2 id="tipos-de-erro">Tipos de erro</h2>
 
@@ -509,8 +503,7 @@ Caso o cliente queira codificar/decodificar um conteúdo como teste, ele pode ac
 
 <h3 id="exemplo">Exemplo</h3>
 
-<p><strong>EXEMPLO XML 03</strong>
-<code class="highlighter-rouge">![](https://developercielo.github.io/images/braspag/conciliador/xml20.png)</code></p>
+<p><img src="https://developercielo.github.io/images/braspag/conciliador/error.png" alt="" /></p>
 
 <h1 id="arquivos-fluxo-de-caixa-20---xml">Arquivos Fluxo de Caixa 2.0 - XML</h1>
 
