--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/manual/split">Split de pagamentos</a>
+                    <a href="https://developercielo.github.io/manual/split">Split de Pagamentos</a>
                 </li>
             
             </ul>
