[88a40b6354e9a5855a41eace6efdc0d3a88bdf7f]: Moved '_i18n/pt/_posts/artigos/2015-08-25-boas-praticas-de-ecommerce.md' to '_i18n/pt/_posts/artigos/2015-08-25-artigos.md' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/boas-praticas-de-ecommerce">Boas Práticas eCommerce</a>
+                    <a href="https://developercielo.github.io/tutorial/artigos">Boas Práticas eCommerce</a>
                 </li>
             
             </ul>
