--- a/404.html
+++ b/404.html
@@ -108,7 +108,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/boas-praticas-de-ecommerce">Boas Práticas eCommerce</a>
+                    <a href="https://developercielo.github.io/tutorial/artigos">Boas Práticas eCommerce</a>
                 </li>
             
             </ul>
