--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="https://developercielo.github.io/tutorial/artigos">Boas Práticas eCommerce</a>
+                    <a href="https://developercielo.github.io/tutorial/artigos">Artigos e informações</a>
                 </li>
             
                 <li class="doc-title">
