[dd30d23d2e0817a1c34d97a00e36948d1116ed66]: Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/tutorial/artigos.html
+++ b/tutorial/artigos.html
@@ -517,6 +517,36 @@
 </span><span class="p">}</span>
 </code></pre></div></div>
 
+<h1 id="como-usar-azure-kubernetes-services">Como usar Azure Kubernetes Services</h1>
+
+<h2 id="sobre-o-autor">Sobre o Autor:</h2>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Tiago Rosendo</td>
+      <td>Desenvolvedor na Braspag e Cielo, backend de coração e apaixonado pelo frontend, entusiasta de JS e Docker e nas horas vagas não dispensa uma jogatina online.</td>
+    </tr>
+    <tr>
+      <td> </td>
+      <td><strong>LinkedIn:</strong> https://www.linkedin.com/in/trosendo / <strong>E-mail:</strong> trosendo@braspag.com.br</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2 id="introdução">Introdução</h2>
+
+<p>Vamos falar um pouco sobre o Azure Kubernetes Services, vulgo AKS.
+O utilizamos para realizar deploys em nossas principais aplicações, desde as mais básicas as mais complexas tudo com alta disponibilidade!</p>
+
+<p>Rodar containers Docker em um computador local é muito simples, basta um comando <code class="highlighter-rouge">docker run nginx</code> e pronto, você tem seu container lindo rodando, porém quando você tem a necessidade de rodar esse mesmo container em um ambiente de nuvem a história muda… 
+Você tem que montar seu cluster, configurar o auto-scale, configurar o load balance… MEU DEUS QUANTA COISA!
+Um certo dia, parei para pesquisar uma solução que poupasse meu tempo, logo, pensei comigo:</p>
+
+<blockquote>
+  <p>“não é possível que ninguém tenha feito algo para simplificar esse processo repetitivo”</p>
+</blockquote>
+
 </div>
 
 
