[6c17dcbd87d92919223c9fd14594bbc86dbfec49]: Updated '_i18n/pt/_posts/documentos-adicionais/2015-08-25-artigos.md' via CloudCannon

--- a/tutorial/artigos.html
+++ b/tutorial/artigos.html
@@ -524,7 +524,7 @@
 <table>
   <tbody>
     <tr>
-      <td>Tiago Rosendo</td>
+      <td><strong>Tiago Rosendo</strong></td>
       <td>Desenvolvedor na Braspag e Cielo, backend de coração e apaixonado pelo frontend, entusiasta de JS e Docker e nas horas vagas não dispensa uma jogatina online.</td>
     </tr>
     <tr>
